apps/netronome/overlays/librepod/deployment-ca-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: netronome
spec:
  template:
    spec:
      containers:
        - name: netronome
          volumeMounts:
            - name: merged-ca-bundle
              mountPath: /etc/ssl/certs/ca-certificates.crt
              subPath: ca-certificates.crt
              readOnly: true
      volumes:
        - name: root-ca-cert
          configMap:
            name: step-certificates-certs
            items:
              - { key: root_ca.crt, path: root_ca.crt }
        - name: merged-ca-bundle
          emptyDir: {}
