apps/netronome/overlays/librepod/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: netronome
spec:
  entryPoints:
  - web
  - websecure
  routes:
  - kind: Rule
    match: Host(`netronome.${BASE_DOMAIN:=libre.pod}`)
    priority: 1
    services:
    - name: netronome
      port: 80
